<resources>
    <string name="app_name">BankingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">add</string>
    <string name="notify">notify</string>
    <string name="search">search</string>
    <string name="user_profile">User Profile</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="night_mode">Night Mode</string>
    <string name="user_detail">User Detail</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log Out</string>
    <string name="email_to_info_tarc_edu_my">EMAIL TO INFO@TARC.EDU.MY</string>
    <string name="dial_012345678">DIAL 012345678</string>
    <string name="show_main">SHOW MAIN</string>
    <string name="visit_taruc">VISIT TARUC</string>
    <string name="following_event">Following Event</string>
    <string name="surrounding_event">Surronding Event</string>
    <string name="joined_event">Joined Event</string>
    <string name="view_details">View Details</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="description">Description</string>
    <string name="date">date</string>
    <string name="location">location</string>
    <string name="reg_new_acc">Do not have an account? Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">filer</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="username">Enter username</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register">Register</string>
    <string name="fill_in_your_details"><u>Fill in your details</u></string>
    <string name="name">Name</string>
    <string name="contact_no">Contact No</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="profile_image">profileImage</string>
    <string name="ic_image">icImage</string>
    <string name="upload_your_profile_picture_optional">Upload your profile picture (Optional)</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="skip">Skip</string>
    <string name="favourite">favourite</string>
    <string name="eventImage">eventImage</string>
    <string name="title_activity_display_event_detail">DisplayEventDetail</string>
    <string name="title_activity_view_event_detail">ViewEventDetail</string>
    <string name="comment">Comment</string>
    <string name="image">Image</string>
    <string name="info">Info</string>
    <string name="join">Join</string>
    <string name="add_favourite">Add to Favourite</string>
    <string name="remove_favourite">Remove from Favourite</string>
    <string name="feedback">Feedback</string>
    <string name="no_limit">No Limit</string>
    <string name="event_id">Event ID</string>
    <string name="event_description">Event Description</string>
    <string name="event_name">Event Name</string>
    <string name="event_invitation_code">Invitation Code</string>
    <string name="event_created_by">Created By</string>
    <string name="event_create_by">Created By</string>
    <string name="event_date">Date</string>
    <string name="event_register_date">Register Date</string>
    <string name="event_price">Price</string>
    <string name="event_type">Type</string>
    <string name="event_capacity">Capacity</string>
    <string name="register_user_url">http://smartvilletaruc.tk/insert_user.php</string>
    <string name="profile_img_upload_url">http://smartvilletaruc.tk/upload_profile_image.php</string>
    <string name="upload_event_image_url">http://smartvilletaruc.tk/upload_event_image.php</string>
    <string name="ic_img_upload_url">http://smartvilletaruc.tk/upload_ic_image.php</string>
    <string name="login_url">http://smartvilletaruc.tk/login.php</string>
    <string name="register_user_validation_url">http://smartvilletaruc.tk/insert_user_validation.php</string>
    <string name="update_isVerified_url">http://smartvilletaruc.tk/update_isVerified.php</string>
    <string name="get_user_image_url">http://smartvilletaruc.tk/select_user_image.php</string>
    <string name="forgot_password_url">http://smartvilletaruc.tk/check_contact_exist.php</string>
    <string name="reset_password_url">http://smartvilletaruc.tk/reset_password.php</string>
    <string name="check_icNo_url">http://smartvilletaruc.tk/check_icNo_exist.php</string>
    <string name="update_user_profile_url">http://smartvilletaruc.tk/update_user_profile.php</string>
    <string name="update_user_contact_url">http://smartvilletaruc.tk/update_user_contact.php</string>
    <string name="update_user_contact_validation_url">http://smartvilletaruc.tk/update_user_contact_validation.php</string>
    <string name="select_user_detail_url">http://smartvilletaruc.tk/select_user_detail.php</string>
    <string name="login_fb_user_url">http://smartvilletaruc.tk/insert_user_fb.php</string>
    <string name="enter_your_ic_no">Enter your IC No.</string>
    <string name="email_contact">Email / Contact No</string>
    <string name="update_user_email_url">http://smartvilletaruc.tk/update_user_email.php</string>
    <string name="event_venue">Venue</string>
    <string name="image_name">Image Name</string>
    <string name="image_upload_date">Image Upload Date</string>
    <string name="posted_at">Posted at</string>
    <string name="databound"> </string>
    <string name="total_rating">TOTAL RATING</string>
    <string name="rating">Rating</string>
    <string name="comment_on">Comment on</string>
    <string name="currency">RM</string>
    <string name="public_event">Public</string>
    <string name="private_event">Private</string>
    <string name="add_favourite_only">Able to Follow Only</string>
    <string name="exit_join">Exit Join</string>
    <string name="user_id">userID</string>
    <string name="full_name">fullname</string>
    <string name="contact">contact</string>
    <string name="gender">gender</string>
    <string name="dob">dob</string>
    <string name="email">email</string>
    <string name="icNo">icNo</string>
    <string name="profileImage">profileImage</string>
    <string name="icImage">icImage</string>
    <string name="password">password</string>
    <string name="isVerified">isVerified</string>
    <string name="country_code">+6</string>
    <string name="cap_password">Enter password</string>
    <string name="cap_email">Email</string>
    <string name="cap_gender">Gender</string>
    <string name="edit_event_detail">Edit Event Detail</string>
    <string name="manage_image">Manage Image</string>
    <string name="manage_announcement">Manage Announcement</string>
    <string name="search_event">Search Event</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="refresh">Refresh</string>
    <string name="control_panel">Control Panel</string>
    <string name="event">Event</string>
    <string name="delete_image">Delete Image</string>
    <string name="announcement">Announcement</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="edit_interest">Edit Interest</string>
    <string name="submit">Submit</string>
    <string name="enter_your_comment_here">Enter your comment here</string>
    <string name="rating_msg">Give us the rating for this event</string>
    <string name="change_contact_no">Change contact no.</string>
    <string name="new_contact_no">New contact</string>
    <string name="participant_list">Participant List</string>
    <string name="edit_information">Edit Information</string>
    <string name="post_announcement">Post Announcement</string>
    <string name="delete_announcement">Delete Announcement</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="post_anm_on">Post Announcement on</string>
    <string name="upload_img_on">Upload Image on</string>
    <string name="create_new_event">Create New Event</string>
    <string name="edit_info_on">Edit Information on</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="gps_location">GPS Location</string>
    <string name="visible_radius_km">Visible Radius (KM)</string>
    <string name="verified_user">Verified User</string>
    <string name="invalid_input">Invalid Input!</string>
    <string name="for_private_event_only">For private event only</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_msg">Are you confirm join this event?</string>
    <string name="error">Error!</string>
    <string name="error_full">Event already full</string>
    <string name="ok">OK</string>
    <string name="error_event_not_found">Event not found</string>
    <string name="error_event_expired">Event already expired</string>
    <string name="pay_to_join">Pay to Join</string>
    <string name="pay">Pay</string>
    <string name="error_event_joined">Event already joined</string>
    <string name="error_not_in_radius">Not in join joinable radius</string>
    <string name="error_invalid_code">Invalid Invitation Code</string>
    <string name="share">Share</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="current_location">Current Location</string>
    <string name="facebook_app_id">333169593956012</string>
    <string name="fb_login_protocol_scheme">fb333169593956012</string>
    <string name="error_gps_status">Please check your GPS status and refresh again.</string>
    <string name="create_event">Create Event</string>
    <string name="keyword">Keyword</string>
    <string name="joining_event">Joining Event</string>
    <string name="title_activity_event_join_list">EventJoinListActivity</string>
    <string name="participant_list_of">Participant List of</string>
    <string name="attention">Attention</string>
    <string name="account_no">Account No.</string>
    <string name="amount_rm">Amount (RM)</string>
    <string name="tac">TAC</string>
    <string name="resend">Resend</string>
    <string name="id_type">Identification Type</string>
    <string name="state_type">State</string>
    <string name="id_no">Identification No</string>
    <string name="request_tac">Request TAC</string>
    <string name="recipient">Recipient</string>
</resources>